# sp1-poseidon2-bn254-scalar

./: Cargo.toml  README.md
noir/src/: main.nr
rust-sp1/: Cargo.toml
rust-sp1/src/: lib.rs
rust-sp1/src/fields/: mod.rs
rust-sp1/src/merkle_tree/: mod.rs
rust-sp1/src/poseidon2/: mod.rs  poseidon2_instance_bn256.rs
src/: lib.rs  main.rs  scalar_field.rs  utils.rs
src/fields/: bn256.rs  utils.rs
src/merkle_tree/: merkle_tree_fp.rs
src/poseidon2/: poseidon2.rs  poseidon2_params.rs
