[package]
name = "sp1-poseidon2-bn256"
# This crate is Fork following <https://docs.rs/zkhash/0.2.0/zkhash/index.html> 
version = "0.2.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
hex = "0.4"
crypto-bigint = "=0.5.5"
rand = { version = "0.8", optional = true }

[patch.crates-io]
crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }

[features]
default = []
std = ["rand"]
