[package]
name = "sp1-poseidon2-bn256"
# This crate is Fork following <https://docs.rs/zkhash/0.2.0/zkhash/index.html> 
version = "0.2.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
hex = "0.4"
crypto-bigint = { version = "=0.5.5", default-features = false }

[dev-dependencies]
rand = { version = "0.8"}

[patch.crates-io]
# crypto-bigint = { git = "https://github.com/sp1-patches/RustCrypto-bigint", tag = "patch-0.5.5-sp1-4.0.0" }
# crypto-bigint = { path = "../../sp1-bigint-patch" }
crypto-bigint = { git = "https://github.com/nuke-web3/RustCrypto-bigint", branch = "patch-v0.5.5" }